--- a/src/3rd party/LuaJIT-1.1.8/LuaJIT-1.1.8.vcxproj.filters
+++ b/src/3rd party/LuaJIT-1.1.8/LuaJIT-1.1.8.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClCompile Include="src\lzio.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\lua.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\lapi.h">
