* changed out folders for Debug (bin_dbg) and Release (bin_rel)

--- a/src/3rd party/LuaJIT-1.1.8/LuaJIT-1.1.8.vcxproj
+++ b/src/3rd party/LuaJIT-1.1.8/LuaJIT-1.1.8.vcxproj
@@ -42,14 +42,14 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IntDir>$(xrIntDir)$(ProjectName)\</IntDir>
-    <OutDir>$(xrGameDir)_bin_rel\</OutDir>
+    <OutDir>$(xrGameDir)bin_rel\</OutDir>
     <TargetExt>.dll</TargetExt>
     <TargetName>$(ProjectName)</TargetName>
     <LinkIncremental>false</LinkIncremental>
     <IgnoreImportLibrary>true</IgnoreImportLibrary>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(xrGameBinDir)</OutDir>
+    <OutDir>$(xrGameDir)bin_dbg\</OutDir>
     <IntDir>$(xrIntDir)$(ProjectName)\</IntDir>
     <TargetExt>.dll</TargetExt>
     <LinkIncremental>false</LinkIncremental>
