+Actor shadow added
+SE_NEAR changed from 9 to 20
+snd_reload_empty added
+zoom_dof enabled
+reload_dof and reload_empty_dof added
+anm_idle_moving_crouch, anm_idle_moving_crouch_g,
anm_idle_moving_crouch_w_gl added
+Full auto pistols that show proper empty anim
+Revolver animation set added (uses WP_WALTHER class)

--- a/src/xrGame/xrGame.vcxproj.filters
+++ b/src/xrGame/xrGame.vcxproj.filters
@@ -7377,6 +7377,12 @@
     <ClInclude Include="ui\ChangeWeatherDialog.hpp">
       <Filter>UI\Multiplayer\Voting</Filter>
     </ClInclude>
+    <ClInclude Include="WeaponCustomAuto.h">
+      <Filter>Core\Client\Objects\items &amp; weapons\Weapons\Custom Weapon\Pistol</Filter>
+    </ClInclude>
+    <ClInclude Include="WeaponRevolver.h">
+      <Filter>Core\Client\Objects\items &amp; weapons\Weapons\Custom Weapon\Pistol</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="damage_manager.cpp">
