+ players class diagram

--- a/src/xrGame/xrGame.vcxproj.filters
+++ b/src/xrGame/xrGame.vcxproj.filters
@@ -11064,5 +11064,8 @@
     <None Include="Weapons.cd">
       <Filter>Class Diagrams</Filter>
     </None>
+    <None Include="Players.cd">
+      <Filter>Class Diagrams</Filter>
+    </None>
   </ItemGroup>
 </Project>
