--- a/src/xrGame/xrGame.vcxproj
+++ b/src/xrGame/xrGame.vcxproj
@@ -4190,6 +4190,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Players.cd" />
     <None Include="Weapons.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
