* debug config for lua-extensions

--- a/src/3rd party/LuaJIT-1.1.8/LuaJIT-1.1.8.vcxproj
+++ b/src/3rd party/LuaJIT-1.1.8/LuaJIT-1.1.8.vcxproj
@@ -103,7 +103,8 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <IgnoreSpecificDefaultLibraries>$(xrLibDir)$(TargetName).lib</IgnoreSpecificDefaultLibraries>
+      <IgnoreSpecificDefaultLibraries>
+      </IgnoreSpecificDefaultLibraries>
       <SubSystem>Windows</SubSystem>
       <RandomizedBaseAddress>false</RandomizedBaseAddress>
       <ImportLibrary>$(xrLibDir)$(TargetName).lib</ImportLibrary>
